5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1613_2043.log
== TEST (2019-04-04 19:30:18) 
-- CODE:
x=float(input("digite o numero:"))
y=float(input("digite o numero:"))
z=float(input("digite o numero:"))
p=float(input("digite o numero:"))

total=(x*0.1+y*0.2+z*0.3+p*0.4/4)
print(round(total,2))
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:32:10) 
-- CODE:
x=float(input("digite o numero:"))
y=float(input("digite o numero:"))
z=float(input("digite o numero:"))
p=float(input("digite o numero:"))

total=(x*0.1+y*0.2+z*0.3+p*0.4/)/(1+2+3+4)
print(round(total,2))
-- ERROR:
File "XXXX", line 6
    total=(x*0.1+y*0.2+z*0.3+p*0.4/)/(1+2+3+4)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:32:15) 
-- CODE:
x=float(input("digite o numero:"))
y=float(input("digite o numero:"))
z=float(input("digite o numero:"))
p=float(input("digite o numero:"))

total=(x*0.1+y*0.2+z*0.3+p*0.4)/(1+2+3+4)
print(round(total,2))
-- OUTPUT:
0.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:32:39) 
-- CODE:
x=float(input("digite o numero:"))
y=float(input("digite o numero:"))
z=float(input("digite o numero:"))
p=float(input("digite o numero:"))

total=(x*1+y*2+z*3+p*4)/(1+2+3+4)
print(round(total,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:32:49) 
-- CODE:
x=float(input("digite o numero:"))
y=float(input("digite o numero:"))
z=float(input("digite o numero:"))
p=float(input("digite o numero:"))

total=(x*1+y*2+z*3+p*4)/(1+2+3+4)
print(round(total,2))
-- EXECUTION TIME:
0.216067
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
